# MEANTRAJ

./: CMakeLists.txt  README.md  README.txt
source/: Eigen.cpp  GP_Regression.py  a.out  run.cpp
